--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/material-top-tabs": "^5.2.5",
     "@react-navigation/native": "^5.4.0",
+    "@welldone-software/why-did-you-render": "^4.2.2",
     "moment": "^2.25.3",
     "react": "16.11.0",
     "react-native": "0.62.2",
