fix(ts): fixed missing ts types & added appcenter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SlightEdgeApp",
+  "name": "slight-edge-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -16,6 +16,9 @@
     "@react-navigation/native": "^5.4.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@welldone-software/why-did-you-render": "^4.2.2",
+    "appcenter": "^3.1.1",
+    "appcenter-analytics": "^3.1.1",
+    "appcenter-crashes": "^3.1.1",
     "lodash": "^4.17.19",
     "moment": "^2.25.3",
     "react": "16.11.0",
@@ -38,7 +41,9 @@
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/jest": "^24.0.24",
+    "@types/lodash": "^4.14.159",
     "@types/react-native": "^0.62.0",
+    "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
