feat: custom font

--- a/ios/SlightEdgeApp/Info.plist
+++ b/ios/SlightEdgeApp/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,5 +53,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>HankRnd-Black.otf</string>
+		<string>HankRnd-Bold.otf</string>
+		<string>HankRnd-Light.otf</string>
+		<string>HankRnd-Regular.otf</string>
+	</array>
 </dict>
 </plist>
