--- a/package.json
+++ b/package.json
@@ -46,13 +46,15 @@
     "@types/react-native": "^0.62.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "16.9.2",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
-    "prettier": "^2.0.4",
+    "prettier": "^2.2.1",
     "react-test-renderer": "16.11.0",
     "redux-devtools": "^3.6.0",
     "typescript": "^3.8.3"
