--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-chart-kit": "^5.5.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
+    "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.7.0",
     "react-native-size-matters": "^0.3.0",
