--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,13 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react",
-    "lib": [
-      "es6"
-    ],
+    "lib": ["es6"],
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
     "target": "esnext"
   },
+  "include": ["node_modules/react-native-redash/lib/typescript/v1/index.d.ts"],
   "exclude": [
     "node_modules",
     "babel.config.js",
