--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
     "strict": true,
     "target": "esnext"
   },
-  "include": ["node_modules/react-native-redash/lib/typescript/v1/index.d.ts"],
+  "include": [
+    "./src",
+    "node_modules/react-native-redash/lib/typescript/v1/index.d.ts"
+  ],
   "exclude": [
     "node_modules",
     "babel.config.js",
