--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-size-matters": "^0.3.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
+    "react-native-vector-icons": "^8.0.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0"
