--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.62.2",
     "react-native-backdrop": "^1.0.16",
     "react-native-chart-kit": "^5.5.0",
+    "react-native-fade-in-out": "https://github.com/mikolajadamowicz/react-native-fade-in-out",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^16.0.8",
